frontend/tests/cases/negative/notInScopeInterfaceAsConstraintToFunMulti.gr
interface Simple1 a where
  simple1 : a -> a

-- one of the interface constraints is not in scope
simple : forall (a : Type) . {Simple1 a, Simple2 a} => a -> a
simple x = x
